web/www/assets/styles.css
/* ... */
.navigation ul li a .title {
  position: relative;
  display: block;
  padding: 0 10px;
  height: 50px;
  line-height: 50px;
  white-space: nowrap;
  font-size: 13px;
}

/*----- Main/Topbar -----*/
.body-section {
  min-height: calc(100vh - 29px);
  width: 100%;
  background-position: center;
  background-size: cover;
  position: relative;
}

body .body-section {
  background-color: var(--dark-blue);
}

.main-container {
  width: 100%;
  height: 60%;
  padding-inline: 2.5%;
}

.main {
  position: absolute;
  width: calc(100% - 250px);
  left: 250px;
  min-height: 100vh;
  transition: 0.5s;
}

.main.active {
  width: calc(100% - 150px);
  left: 150px;
}

.main .topbar {
  width: 100%;
  background: var(--light-blue);
  height: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 15px;
  margin-top: 20px;
  position: relative;
  right: 20px;
}

.toggle {
  position: absolute;
  width: 50px;
  height: 50px;
  cursor: pointer;
  z-index: 99;
  right: 0px;

}

.toggle .icon {
  position: absolute;
  width: 100%;
  height: 100%;
  line-height: 50px;
  font-size: 32px;
  text-align: center;
  color: var(--lighter-blue5);
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-height: 100vh;
}

.search {
  position: absolute;
  width: 200px;
  right: 130px;
  margin-top: 5px;
}

.search label {
  position: relative;
  width: 100%;
}

.search label input {
  width: 100%;
  height: 35px;
  border-radius: 40px;
  padding: 0 20px;
  padding-left: 25px;
  outline: none;
  border-color: var(--lighter-blue2);
  color: var(--lighter-blue4);
}

.search label input::placeholder {
  color: var(--lighter-blue4);
}

.search label .fas {
  position: absolute;
  right: 25px;
  top: 4px;
}

.fa-search::before {
  color: var(--lighter-blue3);
}

.userimg .fa-solid {
  color: var(--lighter-blue3);
  font-size: 24px;
  padding: 20px;
}

.accordian__button {
  display: block;
  width: 50px;
  height: 50px;
  padding: 10px;
  border: none;
  outline: none;
  cursor: pointer;
  background: transparent;
  color: #fff;
  font-size: 22px;
}

.accordian__content {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  margin-left: 15px;
  max-height: 0;
  transition: 0.3s;
}

.accordian__content.active {
  max-height: fit-content;
  overflow: visible;
  transition: 0.3s;
}

.overview {
  left: 250px;
  margin: auto;
  text-align: center;
}

.overview h1 {
  color: #fff;
  font-size: 36px;
  font-weight: 600;
}

.overview p {
  color: #fff;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  padding-top: 1%;
}

.overview-container {
  display: flex;
  flex-direction: column;
  padding: 0px 10px;
}

.overview-box {
  display: flex;
  flex-direction: row;
  color: #fff;
  border-bottom: 2px solid;
  align-content: center;
  width: 400px;
  justify-content: space-between;
}

.overview-box h3 {
  color: #fff;
  font-size: 16px;
  font-weight: 300;
  padding: 3px;
  cursor: pointer;
}

.overview-box h2 {
  color: #fff;
  font-size: 16px;
  font-weight: 600;
  padding: 3px;
  align-self: flex-end;
}

.suggestion {
  width: 100%;
  cursor: pointer;
  padding: 5px;
  justify-content: center;
}

.suggestion:hover {
  background: rgb(22, 25, 233);
  color: rgb(255, 255, 255);
}

/*----- Dropdown -----*/
.drop-container {
  display: flex;
  flex-direction: row;
}

.drop-container h2 {
  background-color: #2e2e2e;
  color: #fff;
  padding: 5px;
  padding-inline: 10px;
  font-size: 16px;
  border: 0px;
  border-radius: 25px;
}

.drop-btn {
  background-color: #2e2e2e;
  color: #fff;
  padding: 5px;
  padding-inline: 10px;
  font-size: 16px;
  border: 1px solid;
  border-radius: 25px;
  cursor: pointer;
  width: 220px;
  transition: 0.3s;
}

.drop-btn:hover,
.drop-btn:focus {
  background-color: #0029ff;
  transition: 0.3s;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  width: 188px;
  border: 1px solid;
  z-index: 1;
  border-radius: 25px;
}

.dropdown-item {
  color: #fff;
  width: 100%;
  background-color: #2e2e2e;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  cursor: pointer;
  transition: 0.3s;
}

.dropdown-content p:last-child {
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

.dropdown-content p:hover {
  background-color: #0029ff;
  transition: 0.3s;
}

/*----- Prompt -----*/
.bg-prompt {
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	position: fixed;
	top: 0;
	justify-content: center;
	align-items: center;
	display: none;
}
.prompt{
	position: relative;
	padding: 10px;
	height: fit-content;
	width: fit-content;
	justify-content: space-between;
	border-radius: 5px;
	color: #fff;
	background: #000;
}
.prompt-text{
	color: #fff;
	font-size: 16px;
	text-align: center;
}
.prompt-content{
	align-items: center;
	justify-content: space-between;
}

/*----- Multi Add -----*/
.multi-add{
  display: flex;
  flex-direction: row;
}
.multi-add input{
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  padding: 2px;
}
.multi-add button{
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  width: 20px;
  padding: 2px;
  font-size: 16px;
  font-weight: 600;
  color: #000;
  background: green;
}

/*----- Modal Popup -----*/
.bg-modal {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  justify-content: center;
  align-items: center;
  display: none;
}

.modal-content {
  width: 60%;
  height: 50%;
  background-color: var(--dark-blue);
  border-radius: 10px;
  text-align: center;
  color: #fff;
  padding: 5%;
  padding-top: 3%;
  position: absolute;
  align-content: center;
  box-shadow: var(--lighter-blue) 7px 7px 20px;
}
/* ... */

